[tool.poetry]
name = "monitoring-system"
version = "0.1.0"
description = ""
authors = ["inishantxchandel <nishantxchandel@gmail.com>"]
readme = "README.md"
packages = [{include = "monitoring_system"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.103.1"
uvicorn = "^0.23.2"
sqlalchemy = "^2.0.20"
pandas = "^2.1.0"
psycopg2 = {extras = ["binary"], version = "^2.9.7"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
